--- a/templates/image-process.html
+++ b/templates/image-process.html
@@ -4,7 +4,9 @@
       <meta charset="utf-8">
       <title>Greeting</title>
     </head>
+
+    
     <body>
-      <p>{{say}}  {{to}}</p>
+      <p>success</p>
     </body>
   </html>
