--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,4 @@
-<link rel="stylesheet" href="styles.css">
-
+<link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 
 <html lang="en">
 
@@ -13,7 +12,7 @@
   <body>
     <h1> Supersampling + Anti-aliasing </h1>
 
-    <form action="hello" method="post">
+    <form action="image-process" method="post" enctype="multipart/form-data">
       <label for="img">Select image:</label>
       <input type="file" id="img" name="img" accept="image/*">
       <input type="submit">
