--- a/css/main.css
+++ b/css/main.css
@@ -2,13 +2,15 @@ section {
     scroll-snap-align: start;
 }
 
-#lead{
+.fullpage{
+    scroll-snap-type: y mandatory;
+    scroll-behavior: smooth;
+    overflow-y: scroll;
     height: 100vh;
 }
 
-.fullpage{
-    scroll-snap-type: y mandatory;
-    overflow-y: scroll;
+#lead{
+    scroll-behavior: smooth;
     height: 100vh;
 }
 
