--- a/css/main.css
+++ b/css/main.css
@@ -2,18 +2,6 @@ section {
     scroll-snap-align: start;
 }
 
-#nav-overlay{
-    position:absolute;
-    height:100%;
-    width:100%;
-    top:0;
-    right:0;
-    bottom:0;
-    left:0;
-    background:rgba(255, 255, 255, 0.8);
-    z-index:1
-}
-
 .navbutton-container {
     position: fixed;
     top: 0;
@@ -26,7 +14,7 @@ section {
 
 .navbutton-container .navbutton-grid{
     position: absolute;
-    right: 1rem;
+    right: 3rem;
     top: 50%;
     transform: translateY(-50%);
     display: grid;
@@ -39,8 +27,10 @@ section {
     bottom: 0;
     right: 0;
     left: 0;
-    font-size: .75em;
+    font-size: 1.2em;
     padding-right: 25px;
+    color: rgba(6, 28, 42, 1);
+    mix-blend-mode: difference;
 }
 
 .navbutton-container .navbutton{
@@ -48,10 +38,11 @@ section {
     width: 20px;
     height: 20px;
     background-color: transparent;
-    border: 3px solid rgb(255, 174, 0);
+    border: 3px solid rgba(6, 28, 42, 0.8);
     border-radius: 100%;
     cursor: pointer;
     pointer-events: all;
+    z-index: 999;
 }
 
 .navbutton-container .navbutton:hover{
