--- a/css/main.css
+++ b/css/main.css
@@ -14,11 +14,11 @@ html {
 
 footer {
     display: flex;
-    width: 79%;
+    width: 80%;
     justify-content: center;
     margin: 20px auto;
     background-color: rgb(211, 134, 26);
-    padding: 10px 0;
+    padding: 10px 0px;
 }
 
 p {
@@ -45,12 +45,13 @@ p {
     line-height: var(--grid-vh);
 }
 
-.intro > .intro-text {
+.intro > .intro-text, .intro-text-small {
     text-align: center;
     font-size: 3.5em;
     height: 70%;
     font-family:'Helvetica';
     font-weight: 900;
+    justify-content: center;
     color:#FFF;
 }
 
@@ -77,7 +78,7 @@ p {
 .main-layout {
     justify-content: center;
     margin: 20px auto;
-    width: 83%;
+    width: 80%;
     display: grid;
     grid-template-columns: 1fr 2fr;
     grid-template-areas:
@@ -86,9 +87,7 @@ p {
 }
 
 .main-layout > .spacing {
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-bottom: 10px;
+    margin: 20px;
 }
 
 .main-layout > .headshot {
@@ -97,12 +96,9 @@ p {
     color: #fff;
     padding: 20px;
     background-color: rgba(20, 93, 160,1);
+    min-height: var(--grid-vh);
 }
 
-.main-layout > .headshot:hover {
-    margin: 5px;
-    transition: 0.3s;
-}
 
 .main-layout > .intro {
     grid-area: intro;
@@ -110,16 +106,16 @@ p {
     padding: 20px;
     font: 1.2em sans-serif;
     background-color: rgba(46, 139, 192,1);
+    margin: auto 20px;
 }
 
 .main-layout > .project {
     grid-area: project;
     padding: 20px;
     display: grid;
-    grid-template-columns: 3fr 1fr;
+    grid-template-columns: 100fr 1fr;
     grid-template-areas:
- 
-    "buffer drag"
+    "buffer drag";
 }
 .project > .buffer {
     grid-area: buffer;
@@ -171,22 +167,48 @@ p {
     color: #fff;
 }
 
-
-
-
-
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 1050px) {
     #wrapper{
         height: 0%;
         margin: 0 0;
     }
 
     .main-layout {
+        margin-bottom: 0;
         width: 85%;
         grid-template-areas:
-            "headshot headshot"
             "intro intro"
+            "headshot headshot"
             "project project";
+    }
+
+    .main-layout > .headshot {
+        min-height: 45vh;
+        min-width: 250px;
+    }
+
+    .main-layout > .intro {
+        min-height: 20vh;
+        min-width: 250px;
+    }
+
+    .intro > .intro-text {
+        display: none;
+    }
+
+    .intro > .intro-text-small {
+        display: flex;
+        font-size: 3em;
+    }
+    
+    .main-layout > .project {
+        display: none;
+        min-width: 250px;
+    }
+
+    footer {
+        margin: 0 auto;
+        min-width: 250px;
     }
 
 }
